# emji-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  database.rs  encoders.rs  main.rs  utils.rs
